[refactor] : 전역 에러 처리, API 문서화 등 전반적인 리팩토링을 진행한다 (#11)